--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "resend": "^4.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
